# swacon

./: .flake8  .gitignore  Justfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/swacon/algorithms/control/collision_avoidance/: safety_filter.py  test.py
src/swacon/algorithms/control/coverage/: solve_control.py  test.py
src/swacon/algorithms/environment/: create_environment.py
src/swacon/algorithms/transforms/: coordinate_transforms.py
src/swacon/configuration/: README.md  environment.py  motion_capture.py  radio.py
src/swacon/data_structures/drone/: command.py  control.py  dynamic_state.py  state.py
src/swacon/data_structures/environment/: environment.py
src/swacon/mpa/: constants.py
src/swacon/mpa/cli/: battery_voltage.py  client.py  drone_discovery.py  main.py
src/swacon/mpa/gui/: main.py
src/swacon/mpa/services/common/: service_configuration.py
src/swacon/mpa/services/control/: main.py
src/swacon/mpa/services/drone/: main.py  server.py  service.py
src/swacon/mpa/services/environment/: main.py  test.py
src/swacon/mpa/services/motion_capture/: main.py  test_old.py  worker.py
src/swacon/mpa/services/registry/: discover.py  main.py  run.sh
src/swacon/spa/: battery_voltage.py  constants.py  drone_discovery.py  environment.py  environment_updater.py  find_newest_file.py  localization.py  main.py  plot_data.py
